# practicepilot

./: README.md  main.py  pyproject.toml  vocab_cli.py
src/practicepilot/: __init__.py  environment.py  prompts.py  qwen.py  vocabulary_db.py
utils/: __init__.py  qwen.py  vocabulary_db.py
utils/assets/: system_prompt.md
