[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "practicepilot"
version = "0.1.0"
description = "PracticePilot: utilities and pipelines for model-based practice workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sigifredo Escobar Gómez" }]
keywords = ["nlp", "transformers", "pytorch", "supabase", "tooling"]

dependencies = [
    "bitsandbytes",
    "torch",
    "transformers",
    "supabase",
]

[project.urls]
Repository = "https://github.com/sigifredo/practicepilot.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
practicepilot = ["assets/*.md"]
